Fix recipe detail infinite loading: add timeout protection and enhanced error handling